# ChangeLog for x11-misc/gigolo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gigolo-9999 (09 Feb 2009)

  09 Feb 2009; Christoph Mende <angelos@gentoo.org> +gigolo-9999.ebuild:
  Initial import
