@@ -1,3 +1,3 @@
-EBUILD gigolo-9999.ebuild 215 RMD160 dc193c5d83882d4967bcd0ba7745d9c15103cca6 SHA1 c1f1ad929192fbcfcf7bc889c2539db166479bd8 SHA256 c1033adf1688f434846707cdcbb67bb554728076016c35c380353360bc56e861
-MISC ChangeLog 235 RMD160 91ee5168c7c3fd911358bee1b0bf16599d9ab12b SHA1 9af8eb54c84e77cbca399af8da7c0c3cee5de623 SHA256 6dfff270eab8ddd3388436dc0178d1924b0a252ecf4988d1ed343dd7ae94d4a3
+EBUILD gigolo-9999.ebuild 474 RMD160 5a1c887faacaad758e77021e417767b5a3adeb24 SHA1 d2f71f56c471e32927454df3c30217c60d5484b2 SHA256 82f3ec53f17b57d53c96420d32e9ba1d4b4d4eaca33fb4f535836ee396b376e5
+MISC ChangeLog 381 RMD160 b64f4a5b2bee49d6fa5e2bee9f90a60eb12d6412 SHA1 363287c4dd07ff3852b1f831416ea5f35e4d150c SHA256 ee5596f8c91339b19052a65285bd5184fb28f1fc6ad373172a2b2a212d492993
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
