@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Feb 2009; Christoph Mende <angelos@gentoo.org> gigolo-9999.ebuild:
+  Add description, dependencies and install docs to /usr/share/doc/${PF}
+
 *gigolo-9999 (09 Feb 2009)
 
   09 Feb 2009; Christoph Mende <angelos@gentoo.org> +gigolo-9999.ebuild:
